--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -21,12 +21,8 @@
    "source": [
     "#instalar = !pip install pandas numpy scikit-learn\n",
     "#passo a passo\n",
-    "# p0 = entender o desafio da empresa\n",
+    "# p0 = entender o desafio da empresa = analisei\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# p2 = preparar a base de dados para inteligência artificial\n",
     "# p3 = criar um modelo de IA -> Score de Créditos : Ruim, Médio e Bom\n",
     "# p4 = escolher o melhor modelo\n",
     "# p5 = usar a nossa IA para fazer novas previsões\n",
@@ -447,6 +443,78 @@
     "tabela = pd.read_csv(\"clientes.csv\")\n",
     "display(tabela)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   id_cliente                100000 non-null  int64  \n",
+      " 1   mes                       100000 non-null  int64  \n",
+      " 2   idade                     100000 non-null  float64\n",
+      " 3   profissao                 100000 non-null  object \n",
+      " 4   salario_anual             100000 non-null  float64\n",
+      " 5   num_contas                100000 non-null  float64\n",
+      " 6   num_cartoes               100000 non-null  float64\n",
+      " 7   juros_emprestimo          100000 non-null  float64\n",
+      " 8   num_emprestimos           100000 non-null  float64\n",
+      " 9   dias_atraso               100000 non-null  float64\n",
+      " 10  num_pagamentos_atrasados  100000 non-null  float64\n",
+      " 11  num_verificacoes_credito  100000 non-null  float64\n",
+      " 12  mix_credito               100000 non-null  object \n",
+      " 13  divida_total              100000 non-null  float64\n",
+      " 14  taxa_uso_credito          100000 non-null  float64\n",
+      " 15  idade_historico_credito   100000 non-null  float64\n",
+      " 16  investimento_mensal       100000 non-null  float64\n",
+      " 17  comportamento_pagamento   100000 non-null  object \n",
+      " 18  saldo_final_mes           100000 non-null  float64\n",
+      " 19  score_credito             100000 non-null  object \n",
+      " 20  emprestimo_carro          100000 non-null  int64  \n",
+      " 21  emprestimo_casa           100000 non-null  int64  \n",
+      " 22  emprestimo_pessoal        100000 non-null  int64  \n",
+      " 23  emprestimo_credito        100000 non-null  int64  \n",
+      " 24  emprestimo_estudantil     100000 non-null  int64  \n",
+      "dtypes: float64(14), int64(7), object(4)\n",
+      "memory usage: 19.1+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# p2 = preparar a base de dados para inteligência artificial -> inteligencia artifical só recebe números\n",
+    "import pandas as pd \n",
+    "tabela = pd.read_csv(\"clientes.csv\")\n",
+    "display(tabela.info())\n",
+    "\n",
+    "# transfrmar em texto\n",
+    "# prifissão - string\n",
+    "# mix de crédito - string\n",
+    "# comportamento_pagamento - string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
