--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -502,19 +502,73 @@
     "import pandas as pd \n",
     "tabela = pd.read_csv(\"clientes.csv\")\n",
     "display(tabela.info())\n",
-    "\n",
-    "# transfrmar em texto\n",
-    "# prifissão - string\n",
-    "# mix de crédito - string\n",
-    "# comportamento_pagamento - string"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   id_cliente                100000 non-null  int64  \n",
+      " 1   mes                       100000 non-null  int64  \n",
+      " 2   idade                     100000 non-null  float64\n",
+      " 3   profissao                 100000 non-null  int32  \n",
+      " 4   salario_anual             100000 non-null  float64\n",
+      " 5   num_contas                100000 non-null  float64\n",
+      " 6   num_cartoes               100000 non-null  float64\n",
+      " 7   juros_emprestimo          100000 non-null  float64\n",
+      " 8   num_emprestimos           100000 non-null  float64\n",
+      " 9   dias_atraso               100000 non-null  float64\n",
+      " 10  num_pagamentos_atrasados  100000 non-null  float64\n",
+      " 11  num_verificacoes_credito  100000 non-null  float64\n",
+      " 12  mix_credito               100000 non-null  int32  \n",
+      " 13  divida_total              100000 non-null  float64\n",
+      " 14  taxa_uso_credito          100000 non-null  float64\n",
+      " 15  idade_historico_credito   100000 non-null  float64\n",
+      " 16  investimento_mensal       100000 non-null  float64\n",
+      " 17  comportamento_pagamento   100000 non-null  int32  \n",
+      " 18  saldo_final_mes           100000 non-null  float64\n",
+      " 19  score_credito             100000 non-null  object \n",
+      " 20  emprestimo_carro          100000 non-null  int64  \n",
+      " 21  emprestimo_casa           100000 non-null  int64  \n",
+      " 22  emprestimo_pessoal        100000 non-null  int64  \n",
+      " 23  emprestimo_credito        100000 non-null  int64  \n",
+      " 24  emprestimo_estudantil     100000 non-null  int64  \n",
+      "dtypes: float64(14), int32(3), int64(7), object(1)\n",
+      "memory usage: 17.9+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# transformar texto em numerico\n",
+    "# profissão - string\n",
+    "    #categorizar as classes (LabelEncoder)\n",
+    "# mix de crédito - string\n",
+    "# comportamento_pagamento - string\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "codificador = LabelEncoder()\n",
+    "\n",
+    "#codificador -> aplica na coluna \"profissão\" - \"mix_credito\" \"comportamento_pagamento\"\n",
+    "tabela[\"profissao\"] = codificador.fit_transform(tabela[\"profissao\"])\n",
+    "\n",
+    "tabela[\"mix_credito\"] = codificador.fit_transform(tabela[\"mix_credito\"])\n",
+    "\n",
+    "tabela[\"comportamento_pagamento\"] = codificador.fit_transform(tabela[\"comportamento_pagamento\"])\n",
+    "\n",
+    "print(tabela.info())"
+   ]
   }
  ],
  "metadata": {
