--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -23,7 +23,7 @@
     "#passo a passo\n",
     "# p0 = entender o desafio da empresa = analisei\n",
     "\n",
-    "# p3 = criar um modelo de IA -> Score de Créditos : Ruim, Médio e Bom\n",
+    "\n",
     "# p4 = escolher o melhor modelo\n",
     "# p5 = usar a nossa IA para fazer novas previsões\n",
     "\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
       " 0   id_cliente                100000 non-null  int64  \n",
       " 1   mes                       100000 non-null  int64  \n",
       " 2   idade                     100000 non-null  float64\n",
-      " 3   profissao                 100000 non-null  int32  \n",
+      " 3   profissao                 100000 non-null  int64  \n",
       " 4   salario_anual             100000 non-null  float64\n",
       " 5   num_contas                100000 non-null  float64\n",
       " 6   num_cartoes               100000 non-null  float64\n",
@@ -531,12 +531,12 @@
       " 9   dias_atraso               100000 non-null  float64\n",
       " 10  num_pagamentos_atrasados  100000 non-null  float64\n",
       " 11  num_verificacoes_credito  100000 non-null  float64\n",
-      " 12  mix_credito               100000 non-null  int32  \n",
+      " 12  mix_credito               100000 non-null  int64  \n",
       " 13  divida_total              100000 non-null  float64\n",
       " 14  taxa_uso_credito          100000 non-null  float64\n",
       " 15  idade_historico_credito   100000 non-null  float64\n",
       " 16  investimento_mensal       100000 non-null  float64\n",
-      " 17  comportamento_pagamento   100000 non-null  int32  \n",
+      " 17  comportamento_pagamento   100000 non-null  int64  \n",
       " 18  saldo_final_mes           100000 non-null  float64\n",
       " 19  score_credito             100000 non-null  object \n",
       " 20  emprestimo_carro          100000 non-null  int64  \n",
@@ -544,8 +544,8 @@
       " 22  emprestimo_pessoal        100000 non-null  int64  \n",
       " 23  emprestimo_credito        100000 non-null  int64  \n",
       " 24  emprestimo_estudantil     100000 non-null  int64  \n",
-      "dtypes: float64(14), int32(3), int64(7), object(1)\n",
-      "memory usage: 17.9+ MB\n",
+      "dtypes: float64(14), int64(10), object(1)\n",
+      "memory usage: 19.1+ MB\n",
       "None\n"
      ]
     }
@@ -568,6 +568,61 @@
     "tabela[\"comportamento_pagamento\"] = codificador.fit_transform(tabela[\"comportamento_pagamento\"])\n",
     "\n",
     "print(tabela.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aprendizado de Máquina\n",
+    "# x = são as colunas que você irá usar para fazer a previsão\n",
+    "# y = coluna que você quer prever\n",
+    "\n",
+    "y = tabela[\"score_credito\"]\n",
+    "x = tabela.drop(columns=[\"score_credito\", \"id_cliente\"])\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_treino, x_teste, y_treino, y_teste = train_test_split(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute '_validate_params'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10048\\1032425500.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mmodelo_arvoredecisao\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mmodelo_knn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m#treinar a IA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mmodelo_arvoredecisao\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_treino\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_treino\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mmodelo_knn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_treino\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_treino\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1141\u001b[0m                 \u001b[0mfit_method\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"partial_fit\"\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0m_is_fitted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1142\u001b[0m             )\n\u001b[0;32m   1143\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1144\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mglobal_skip_validation\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mpartial_fit_and_fitted\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1145\u001b[1;33m                 \u001b[0mestimator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1146\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1147\u001b[0m             with config_context(\n\u001b[0;32m   1148\u001b[0m                 skip_parameter_validation=(\n",
+      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6200\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6202\u001b[0m         ):\n\u001b[0;32m   6203\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute '_validate_params'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# p3 = criar um modelo de IA -> Score de Créditos : Ruim, Médio e Bom\n",
+    "    # Arvore de DEcisão -> RandonForest\n",
+    "    # KNN -> Vizinhos Próximos -> Kneighbors\n",
+    "\n",
+    "#importar a inteligencia artificial\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "#criar a IA\n",
+    "modelo_arvoredecisao = RandomForestClassifier()\n",
+    "modelo_knn = KNeighborsClassifier\n",
+    "#treinar a IA\n",
+    "modelo_arvoredecisao.fit(x_treino, y_treino)\n",
+    "modelo_knn.fit(x_treino, y_treino)\n"
    ]
   }
  ],
