--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -439,14 +439,15 @@
    ],
    "source": [
     "# importar a base de dados\n",
-    "import pandas as pd \n",
-    "tabela = pd.read_csv(\"clientes.csv\")\n",
+    "import pandas as pd\n",
+    "\n",
+    "tabela = pd.read_csv(\"clientes.csv\") # importa a base de dados\n",
     "display(tabela)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -484,30 +485,31 @@
       " 23  emprestimo_credito        100000 non-null  int64  \n",
       " 24  emprestimo_estudantil     100000 non-null  int64  \n",
       "dtypes: float64(14), int64(7), object(4)\n",
-      "memory usage: 19.1+ MB\n"
+      "memory usage: 19.1+ MB\n",
+      "None\n",
+      "Index(['id_cliente', 'mes', 'idade', 'profissao', 'salario_anual',\n",
+      "       'num_contas', 'num_cartoes', 'juros_emprestimo', 'num_emprestimos',\n",
+      "       'dias_atraso', 'num_pagamentos_atrasados', 'num_verificacoes_credito',\n",
+      "       'mix_credito', 'divida_total', 'taxa_uso_credito',\n",
+      "       'idade_historico_credito', 'investimento_mensal',\n",
+      "       'comportamento_pagamento', 'saldo_final_mes', 'score_credito',\n",
+      "       'emprestimo_carro', 'emprestimo_casa', 'emprestimo_pessoal',\n",
+      "       'emprestimo_credito', 'emprestimo_estudantil'],\n",
+      "      dtype='object')\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "# p2 = preparar a base de dados para inteligência artificial -> inteligencia artifical só recebe números\n",
-    "import pandas as pd \n",
-    "tabela = pd.read_csv(\"clientes.csv\")\n",
-    "display(tabela.info())\n",
+    "# verificar se temos valores vazios ou valores reconhecidos em formato errado\n",
+    "print(tabela.info())\n",
+    "print(tabela.columns)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +524,7 @@
       " 0   id_cliente                100000 non-null  int64  \n",
       " 1   mes                       100000 non-null  int64  \n",
       " 2   idade                     100000 non-null  float64\n",
-      " 3   profissao                 100000 non-null  int64  \n",
+      " 3   profissao                 100000 non-null  int32  \n",
       " 4   salario_anual             100000 non-null  float64\n",
       " 5   num_contas                100000 non-null  float64\n",
       " 6   num_cartoes               100000 non-null  float64\n",
@@ -531,12 +533,12 @@
       " 9   dias_atraso               100000 non-null  float64\n",
       " 10  num_pagamentos_atrasados  100000 non-null  float64\n",
       " 11  num_verificacoes_credito  100000 non-null  float64\n",
-      " 12  mix_credito               100000 non-null  int64  \n",
+      " 12  mix_credito               100000 non-null  int32  \n",
       " 13  divida_total              100000 non-null  float64\n",
       " 14  taxa_uso_credito          100000 non-null  float64\n",
       " 15  idade_historico_credito   100000 non-null  float64\n",
       " 16  investimento_mensal       100000 non-null  float64\n",
-      " 17  comportamento_pagamento   100000 non-null  int64  \n",
+      " 17  comportamento_pagamento   100000 non-null  int32  \n",
       " 18  saldo_final_mes           100000 non-null  float64\n",
       " 19  score_credito             100000 non-null  object \n",
       " 20  emprestimo_carro          100000 non-null  int64  \n",
@@ -544,8 +546,8 @@
       " 22  emprestimo_pessoal        100000 non-null  int64  \n",
       " 23  emprestimo_credito        100000 non-null  int64  \n",
       " 24  emprestimo_estudantil     100000 non-null  int64  \n",
-      "dtypes: float64(14), int64(10), object(1)\n",
-      "memory usage: 19.1+ MB\n",
+      "dtypes: float64(14), int32(3), int64(7), object(1)\n",
+      "memory usage: 17.9+ MB\n",
       "None\n"
      ]
     }
@@ -557,9 +559,10 @@
     "# mix de crédito - string\n",
     "# comportamento_pagamento - string\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
+    "# vai transformar as colunas de texto em números, ex: profissoes vai sair de cientista, professor, mecanico, etc para 0, 1, 2, etc\n",
     "codificador = LabelEncoder()\n",
     "\n",
+    "# só não aplicamos na coluna de score_credito que é o nosso objetivo\n",
     "#codificador -> aplica na coluna \"profissão\" - \"mix_credito\" \"comportamento_pagamento\"\n",
     "tabela[\"profissao\"] = codificador.fit_transform(tabela[\"profissao\"])\n",
     "\n",
@@ -572,57 +575,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aprendizado de Máquina\n",
-    "# x = são as colunas que você irá usar para fazer a previsão\n",
-    "# y = coluna que você quer prever\n",
-    "\n",
+    "# escolhendo quais colunas vamos usar para treinar o modelo\n",
+    "# y é a coluna que queremos que o modelo calcule\n",
+    "# x vai todas as colunas que vamos usar para prever o score de credito, não vamos usar a coluna id_cliente porque ela é um numero qualquer que nao ajuda a previsao\n",
+    "x = tabela.drop([\"score_credito\", \"id_cliente\"], axis=1)\n",
     "y = tabela[\"score_credito\"]\n",
-    "x = tabela.drop(columns=[\"score_credito\", \"id_cliente\"])\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_treino, x_teste, y_treino, y_teste = train_test_split(x, y)"
+    "# separamos os dados em treino e teste. Treino vamos dar para os modelos aprenderem e teste vamos usar para ver se o modelo aprendeu corretamente\n",
+    "x_treino, x_teste, y_treino, y_teste = train_test_split(x, y, test_size=0.3, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute '_validate_params'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10048\\1032425500.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mmodelo_arvoredecisao\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mmodelo_knn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m#treinar a IA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mmodelo_arvoredecisao\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_treino\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_treino\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mmodelo_knn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_treino\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_treino\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1141\u001b[0m                 \u001b[0mfit_method\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"partial_fit\"\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0m_is_fitted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1142\u001b[0m             )\n\u001b[0;32m   1143\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1144\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mglobal_skip_validation\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mpartial_fit_and_fitted\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1145\u001b[1;33m                 \u001b[0mestimator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1146\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1147\u001b[0m             with config_context(\n\u001b[0;32m   1148\u001b[0m                 skip_parameter_validation=(\n",
-      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6200\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6202\u001b[0m         ):\n\u001b[0;32m   6203\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute '_validate_params'"
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "KNeighborsClassifier()"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# p3 = criar um modelo de IA -> Score de Créditos : Ruim, Médio e Bom\n",
+    "    # Arvore de DEcisão -> RandonForest\n",
+    "    # KNN -> Vizinhos Próximos -> Kneighbors\n",
+    "# importa a IA\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "# Cria a IA\n",
+    "modelo_arvoredecisao = RandomForestClassifier() # modelo arvore de decisao\n",
+    "modelo_knn = KNeighborsClassifier() # modelo do KNN (nearest neighbors - vizinhos mais proximos)\n",
+    "# treinando os modelos de IA\n",
+    "modelo_arvoredecisao.fit(x_treino, y_treino)\n",
+    "modelo_knn.fit(x_treino, y_treino)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Leonardo\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9568666666666666\n",
+      "0.7324\n"
      ]
     }
    ],
    "source": [
+    "#testar o modelo 3 compara os modelos\n",
+    "#acurácia\n",
     "\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# p3 = criar um modelo de IA -> Score de Créditos : Ruim, Médio e Bom\n",
-    "    # Arvore de DEcisão -> RandonForest\n",
-    "    # KNN -> Vizinhos Próximos -> Kneighbors\n",
+    "previsao_arvoredecisao = modelo_arvoredecisao.predict(x_teste)\n",
+    "previsao_knn = modelo_knn.predict(x_teste.to_numpy())\n",
     "\n",
-    "#importar a inteligencia artificial\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "#criar a IA\n",
-    "modelo_arvoredecisao = RandomForestClassifier()\n",
-    "modelo_knn = KNeighborsClassifier\n",
-    "#treinar a IA\n",
-    "modelo_arvoredecisao.fit(x_treino, y_treino)\n",
-    "modelo_knn.fit(x_treino, y_treino)\n"
+    "print(accuracy_score(y_teste, previsao_arvoredecisao))\n",
+    "print(accuracy_score(y_teste, previsao_knn))"
    ]
   }
  ],
