--- a/inicial.ipynb
+++ b/inicial.ipynb
@@ -659,6 +659,252 @@
     "print(accuracy_score(y_teste, previsao_arvoredecisao))\n",
     "print(accuracy_score(y_teste, previsao_knn))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mes</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>profissao</th>\n",
+       "      <th>salario_anual</th>\n",
+       "      <th>num_contas</th>\n",
+       "      <th>num_cartoes</th>\n",
+       "      <th>juros_emprestimo</th>\n",
+       "      <th>num_emprestimos</th>\n",
+       "      <th>dias_atraso</th>\n",
+       "      <th>num_pagamentos_atrasados</th>\n",
+       "      <th>...</th>\n",
+       "      <th>taxa_uso_credito</th>\n",
+       "      <th>idade_historico_credito</th>\n",
+       "      <th>investimento_mensal</th>\n",
+       "      <th>comportamento_pagamento</th>\n",
+       "      <th>saldo_final_mes</th>\n",
+       "      <th>emprestimo_carro</th>\n",
+       "      <th>emprestimo_casa</th>\n",
+       "      <th>emprestimo_pessoal</th>\n",
+       "      <th>emprestimo_credito</th>\n",
+       "      <th>emprestimo_estudantil</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>empresario</td>\n",
+       "      <td>19300.340</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.934186</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>44.50951</td>\n",
+       "      <td>baixo_gasto_pagamento_baixo</td>\n",
+       "      <td>312.487689</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>advogado</td>\n",
+       "      <td>12600.445</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.819407</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>baixo_gasto_pagamento_medio</td>\n",
+       "      <td>300.994163</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>empresario</td>\n",
+       "      <td>20787.690</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34.235853</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>baixo_gasto_pagamento_alto</td>\n",
+       "      <td>345.081577</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mes  idade   profissao  salario_anual  num_contas  num_cartoes  \\\n",
+       "0    1   31.0  empresario      19300.340         6.0          7.0   \n",
+       "1    4   32.0    advogado      12600.445         5.0          5.0   \n",
+       "2    2   48.0  empresario      20787.690         8.0          6.0   \n",
+       "\n",
+       "   juros_emprestimo  num_emprestimos  dias_atraso  num_pagamentos_atrasados  \\\n",
+       "0              17.0              5.0         52.0                      19.0   \n",
+       "1              10.0              3.0         25.0                      18.0   \n",
+       "2              14.0              7.0         24.0                      14.0   \n",
+       "\n",
+       "   ...  taxa_uso_credito idade_historico_credito  investimento_mensal  \\\n",
+       "0  ...         29.934186                   218.0             44.50951   \n",
+       "1  ...         28.819407                    12.0              0.00000   \n",
+       "2  ...         34.235853                   215.0              0.00000   \n",
+       "\n",
+       "       comportamento_pagamento  saldo_final_mes  emprestimo_carro  \\\n",
+       "0  baixo_gasto_pagamento_baixo       312.487689                 1   \n",
+       "1  baixo_gasto_pagamento_medio       300.994163                 0   \n",
+       "2   baixo_gasto_pagamento_alto       345.081577                 0   \n",
+       "\n",
+       "  emprestimo_casa  emprestimo_pessoal  emprestimo_credito  \\\n",
+       "0               1                   0                   0   \n",
+       "1               0                   0                   0   \n",
+       "2               1                   0                   1   \n",
+       "\n",
+       "   emprestimo_estudantil  \n",
+       "0                      0  \n",
+       "1                      1  \n",
+       "2                      0  \n",
+       "\n",
+       "[3 rows x 23 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Poor' 'Good' 'Standard']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # fazendo novas previsões\n",
+    "#     #importar novos clientes\n",
+    "# tabela_novos_clientes = pd.read_csv(\"novos_clientes.csv\")\n",
+    "# display(tabela_novos_clientes)\n",
+    "# # codificar novos clientes\n",
+    "# tabela_novos_clientes[\"profissao\"] = codificador.fit_transform(tabela[\"profissao\"])\n",
+    "\n",
+    "# tabela_novos_clientes[\"mix_credito\"] = codificador.fit_transform(tabela[\"mix_credito\"])\n",
+    "\n",
+    "# tabela_novos_clientes[\"comportamento_pagamento\"] = codificador.fit_transform(tabela[\"comportamento_pagamento\"])\n",
+    "\n",
+    "# #fazer a previsão\n",
+    "# previsoes = modelo_arvoredecisao.predict(tabela_novos_clientes)\n",
+    "# print(previsoes)\n",
+    "\n",
+    "# fazendo novas previsões\n",
+    "novos_clientes = pd.read_csv(\"novos_clientes.csv\")\n",
+    "display(novos_clientes)\n",
+    "for coluna in novos_clientes.columns:\n",
+    "    if novos_clientes[coluna].dtype == \"object\" and coluna != \"score_credito\":\n",
+    "        novos_clientes[coluna] = codificador.fit_transform(novos_clientes[coluna])\n",
+    "\n",
+    "previsoes = modelo_arvoredecisao.predict(novos_clientes)\n",
+    "print(previsoes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                  0\n",
+      "mes                        4.011242\n",
+      "idade                      4.276460\n",
+      "profissao                  3.306472\n",
+      "salario_anual              5.130970\n",
+      "num_contas                 3.665681\n",
+      "num_cartoes                4.381486\n",
+      "juros_emprestimo           8.304164\n",
+      "num_emprestimos            3.128813\n",
+      "dias_atraso                6.526153\n",
+      "num_pagamentos_atrasados   4.412675\n",
+      "num_verificacoes_credito   4.672185\n",
+      "mix_credito                8.712794\n",
+      "divida_total              10.973896\n",
+      "taxa_uso_credito           5.052228\n",
+      "idade_historico_credito    7.333455\n",
+      "investimento_mensal        4.809394\n",
+      "comportamento_pagamento    2.357335\n",
+      "saldo_final_mes            5.425056\n",
+      "emprestimo_carro           0.713959\n",
+      "emprestimo_casa            0.714092\n",
+      "emprestimo_pessoal         0.693561\n",
+      "emprestimo_credito         0.698322\n",
+      "emprestimo_estudantil      0.699607\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# quais as caracteristicas mais importantes para definir o score de credito?\n",
+    "colunas = list(x_teste.columns)\n",
+    "importancia = pd.DataFrame(index=colunas, data=modelo_arvoredecisao.feature_importances_)\n",
+    "importancia = importancia * 100\n",
+    "print(importancia)"
+   ]
   }
  ],
  "metadata": {
